pl 19.jcn1
	- small changes to sharp, fermata
	- small changes to lilypond.lsm+doc, lelievijver.lsm
	- mi2mu updeet + bf

pl 19
	- bf: keyword.cc rm'd struct defs
	- dots: support for feta dots.
	- lots of font (feta) tjanges
	- mf-to-table rewrite in python

*********
pl 18.jcn1
	- check for python, mf-deps fix

pl 18
	- bf: Box[X_AXIS] = b
	- bin/mf-deps.py script
	- moved beams out of font-en-tja into vette-beams.  
	- Made corresponding .cc changes.
	

jcn patches
	- egcs compile (no link yet)
	- nicer 4rest
	- beam font (je kunt wel tegen een grapje, eva?)
	- mf-to-table: 
	  * "breapth" (x-depth) feature
	  * handle generic stuff such as beams
	- polished noteheads
	- fixed 8-128 rests
	- 4rest
	- mf-to-table generates tex defs
	- bf:mf-to-table and conflily outname check
	- 8-128 rests

******
sep 24
 
pl 17
	- bf: ledgerline width
	- bf: toccata-fuga-E
	- took out some hardwiring of tex-beam
	
pl 16.jcn1
  	- mf-to-table.in: generate mozarella metric info tables
	- autometric.mf: write metric info to mf logfile
	- ital-r.mf, smaller ital-m.mf
	- variable streepjes length (top/bottomlines); fixed (for 20pt?)
	- streepjes twice as thick as staffrules
	- even more pronounced bolletjes -- how 'bout this wendy?
	- quarter and half note after drawings (a/b less distinct)

*****
sep 19
pl 16
	- revised mudela-man a bit
	- ; optional after \musicidentifier
	- bf: doco about {Mus*,Opus}TeX
	- bf: configure: MFDIR
	- bf: String::operator bool () removed
	- bf: String::operator char const * () removed
	- bf: Line_spacer::~Line_spacer () added: plugged memleak
	- bf: Line_of_score::do_unlink () call Spanner::do_unlink
	- bf: rests in beams
	- bf: textnatural
	- bf: 20 pt flags
	- bf: longarest 
	
pl 15.jcn1
	- bf: typos whole and half notehead
	- de-uglyfied bolletjes.mf
	- ascii output of font metrics in mf logfile

******
sep 17

	
pl 15
	- put top of NEWS file in the webpage
	- breadth first search for engravers.
	- bf: coriolan-alto.ly