@@ -1,7 +1,7 @@
 Begin3
 Titel: LilyPond
-Versie: 0.1.19.jcn1
-Inschrijf datum: 06OCT97
+Versie: 0.1.19.jcn2
+Inschrijf datum: 07OCT97
 Beschrijving: LilyPond is de muziek typesetter van het GNU Project.  
 		Het programma genereert muziek in zichtbare of 
 		hoorbare vorm uit uit een muzikale definitie file: 
@@ -16,8 +16,8 @@ Auteur: hanwen@stack.nl (Han-Wen Nienhuys)
 	jan@digicash.com (Jan Nieuwenhuizen)
 Onderhouden door: hanwen@stack.nl (Han-Wen Nienhuys)
 Voornaamste plek: sunsite.unc.edu /pub/Linux/apps
-	395k lilypond-0.1.19.jcn1.tar.gz 
+	395k lilypond-0.1.19.jcn2.tar.gz 
 Oorspronkelijke plek: pcnov095.win.tue.nl /pub/lilypond/
-	395k lilypond-0.1.19.jcn1.tar.gz 
+	395k lilypond-0.1.19.jcn2.tar.gz 
 Copi"eer politie: GPL
 End
