@@ -1,3 +1,10 @@
+pl 19.jcn2
+	- bf's mi2mu:
+	  * Midi_track_parser::note_end_all
+	  * staff output uses key, meter, tempo read
+	  * command line read minor key
+	  * minor key notenames
+
 pl 19.jcn1
 	- small changes to sharp, fermata
 	- small changes to lilypond.lsm+doc, lelievijver.lsm
